--- a/src/components/InteractivePiano.css
+++ b/src/components/InteractivePiano.css
@@ -84,15 +84,14 @@
 
 .interactive-piano__octave-shift-key {
   cursor: pointer;
-  background: #c0b3d8de;
+  background: #BAAED1;
   height: 180px;
   width: 30px;
-  margin: 0 2px;
-  border-radius: 0 0 3px 3px;
   border: none;
-  padding: 10px;
   outline: none;
-  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .interactive-piano__octave-shift-key:first-of-type {
