--- a/src/components/Piano/TraditionalPiano/TraditionalPiano.css
+++ b/src/components/Piano/TraditionalPiano/TraditionalPiano.css
@@ -1,7 +1,7 @@
 .traditional-piano__keyboard-container {
   display: flex;
   flex: 1;
-  z-index: 1; 
+  z-index: 1;
 }
 
 .traditional-piano__accidental-key__wrapper {
@@ -15,7 +15,6 @@
   /* Firefox Specific CSS to remove button differences and focus ring */
   background-image: none;
   position: absolute;
-  transform: translateX(-50%);
   cursor: pointer;
   background: #444;
   border-radius: 0px 0px 3px 3px;
@@ -31,7 +30,7 @@
 }
 
 .traditional-piano__accidental-key--playing-by-others {
-  background: #E1A546;
+  background: #e1a546;
   color: #fff;
 }
 
@@ -56,8 +55,8 @@
 }
 
 .traditional-piano__natural-key--playing-by-others {
-  border-bottom: 10px solid #E1A546;
-  color: #E1A546;
+  border-bottom: 10px solid #e1a546;
+  color: #e1a546;
 }
 
 .traditional-piano__text-container {
@@ -72,7 +71,7 @@
 .traditional-piano__text--top-text {
   pointer-events: none;
   color: rgb(136, 134, 134);
-  margin-bottom: 3px; 
+  margin-bottom: 3px;
 }
 
 .traditional-piano__text--bottom-text {
@@ -85,14 +84,14 @@
   /* Firefox Specific CSS to remove button differences and focus ring */
   background-image: none;
   cursor: pointer;
-  background: #BAAED1;
+  background: #baaed1;
   width: 30px;
   border: none;
   outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2; 
+  z-index: 2;
 }
 
 .traditional-piano__octave-shift-key:first-of-type {
