--- a/src/components/Piano/TraditionalPiano/TraditionalPiano.css
+++ b/src/components/Piano/TraditionalPiano/TraditionalPiano.css
@@ -22,6 +22,7 @@
   padding: 5px;
   outline: none;
   color: #dbdbdb;
+  pointer-events: all;
 }
 
 .traditional-piano__accidental-key--playing-by-me {
@@ -43,7 +44,7 @@
   background: #fafafa;
   border-radius: 0 0 3px 3px;
   border-color: rgba(73, 73, 73, 0.2);
-  padding: 10px;
+  padding: 5px;
   outline: none;
   box-sizing: border-box;
   color: #444;
@@ -65,7 +66,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  font-size: 1rem;
+  text-align: center;
 }
 
 .traditional-piano__text--top-text {
